# smart-home-rpi-backend

./: README.md  infrared_remote.py  lcd.py  pyproject.toml  tvpower.txt
data/: SB-PWR-2.ir  SONY-PWR-2.ir  VZO-DN-1.ir  VZO-INPUT-1.ir  VZO-L-1.ir  VZO-MENU-1.ir  VZO-OK-1.ir  VZO-PWR-1.ir  VZO-R-1.ir  VZO-UP-1.ir  VZO-VOL-DN-1.ir  VZO-VOL-UP-1.ir
src/: governor.c  governor.h  initialize.py  input_menu.py  menu.py  menu_options.py  smart_home_rpi_backend.py
