[project]
name = "smart-home-rpi-backend"
version = "0.1.0"
description = "Simple backend to expose GPIO sensors of Raspberry Pi"
authors = [
    {name = "Yunhao Jiang",email = "39151399+yunhao-jiang@users.noreply.github.com"}
]
license = {text = "GNU"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rpi-lcd (>=0.0.3,<0.0.4)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
